# cctbx_project

./: .clutterignore  .git-notifier  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.rst  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.txt  LICENSE.txt  README.md  SUMMARY.md  azure-pipelines.yml  news.html  site.py
mmtbx/probe/: AtomTypes.py  CMakeLists.txt  Common.h  CompareOriginalAndNewProbeAtomInfo.py  DotSpheres.cpp  DotSpheres.h  Helpers.py  LICENSE  README.md  SConscript  Scoring.cpp  Scoring.h  SpatialQuery.cpp  SpatialQuery.h  __init__.py  compare_probe_vs_cctbx_atom_info.py  ener_lib_molprobity.cif  tst_mmtbx_probe_ext.py  tst_probe.cpp  tst_probe.py
mmtbx/probe/boost_python/: probe_bpl.cpp
mmtbx/probe/cmake/: FindCCTBX.cmake
mmtbx/suitename/C/: CMakeLists.txt  Makefile  Makefile.linux  Makefile.macOSX  SConscript  suitename.c  suitename.h  suitenhead.h  suiteninit.c  suiteninit.h  suiteninpt.c  suiteninpt.h  suitenout.c  suitenout.h  suitenscrt.c  suitenscrt.h  suitenutil.c  suitenutil.h
xfel/: SConscript  __init__.py  acqiris_ext.cpp  detector_formats.py  ext.cpp  libtbx_config  libtbx_refresh.py  merging.cpp  metrology_ext.cpp  phil_preferences.py  project.cpp  pyproject.toml  run_tests.py
xfel/amo/pnccd_ana/: fxs.py  mpi_fxs_bg.py  mpi_fxs_c2.py  mpi_fxs_calib.py  mpi_fxs_index.py  mpi_fxs_launch.py  mpi_fxs_mask.py  pnccd_hit.py  pnccd_tbx.py
xfel/cftbx/detector/: cspad_cbf_tbx.py  cspad_detector.py  generic_detector.py  metrology.py  metrology2phil.py  write_cspad_cbf.py
xfel/clustering/: Cluster.py  SConscript  __init__.py  api.py  cluster.py  cluster_groups.py  ext.cpp  simulate_partial_data.py  singleframe.py  test_cluster.py
xfel/clustering/command_line/: cluster_42.py  cluster_intensity_statistics.py  cluster_per_frame_wilson.py  cluster_unit_cell.py  cluster_visualise_orientations.py
xfel/command_line/: FEE_average_plot.py  auto_submit.py  beamcenter.py  brehm_diederichs.py  calc_gain_ratio.py  cbf_average.py  cctbx_integration_pickle_viewer.py  cluster_42.py  cluster_intensity_statistics.py  cluster_per_frame_wilson.py  cluster_unit_cell.py  convert_gain_map.py  convert_gain_map_cbf.py  cspad_cbf_metrology.py  cspad_circular_gain_mask.py  cspad_detector_congruence.py  cspad_detector_congruence2.py  cspad_detector_shifts.py  cspad_detector_statistics.py  cxi_apply_metrology.py  cxi_calibdir2cbfheader.py  cxi_cbfheader2slaccalib.py  cxi_cspad_pinwheel.py  cxi_detector_format_versions.py  cxi_diff.py  cxi_display_metrology.py  cxi_generate_circular_gain_mask.py  cxi_image2pickle.py  cxi_index.py  cxi_lsf.py  cxi_merge.py  cxi_mpi_submit.py  cxi_optical2cbfheader.py  cxi_parameters.py  cxi_pbs.py  cxi_pickle2cbf.py  cxi_plotcv.py  cxi_psana.py  cxi_pyana.py  cxi_slaccalib2cbfheader.py  (+73 more)
xfel/conda_envs/: README.md  ml.yml  psana_environment.yml  psana_lcls_environment.yml  test_psana_lcls.sh
xfel/cxi/: average_spots.py  completeness_plot.py  correction_vector_plot.py  cxi_cc.py  data_utils.py  display_powder_arcs.py  display_spots.py  integrate_image_api.py  lsf.sh  merging_database.py  merging_database_flex.py  merging_database_fs.py  merging_database_sqlite3.py  merging_utils.py  pbs.sh  postrefinement_factory.py  postrefinement_hybrid_rs.py  postrefinement_legacy_rs.py  postrefinement_updated_rs.py  spectra_filter.py  strong_zulu.py  trumpet_plot.py  util.py
xfel/cxi/clustering/: Cluster.py  Design_intent  SingleFrame.py  test_cluster.py
xfel/cxi/command_line/: einsle.py
xfel/euxfel/: AGIPD.phil  agipd_cxigeom2nexus.py  agipd_from_defs.py  jf16m_cxigeom2nexus.py  read_geom.py  write_composite_image.py  write_new_geom.py
xfel/graph_proc/: components.py  graph.py  multiproc_temp_parame_opt.py  parameter_optimizer.py
xfel/lcls_api/: exercise_api.py  psana_cctbx.py
xfel/merging/: README.md  SConscript  __init__.py  absorption.py  ext.cpp  general_fcalc.py  phil_validation.py  predictions_to_edges.py  refine.py  test.py
xfel/metrology/: __init__.py  flatfile.py  mark0.py  mark1.py  mark10.py  mark3.py  panel_fitting.py  quadrant.py  xpp-20130124.txt
xfel/mono_simulation/: SConscript  __init__.py  bandpass_gaussian.cpp  bandpass_gaussian.h  ccixfel_core.cpp  ext.cpp  max_like.py  max_like_pos_neg.py  mono_treatment.py  parameters.h  util.py  vector_collection.h
xfel/pal/: jf4m_geom2nexus.py
xfel/poly/: recompute_mosaic_params.py
xfel/sacla/: dump_sacla_data.py  mpccd_geom2json.py
xfel/small_cell/: README.md  geometry_refiner.py  powder_refine_geometry_notes.md  powder_util.py  small_cell.py  solve_orientation.py  spotfinder_radial_average.py  write_orientation_arrows.py
xfel/swissfel/: jf16m_cxigeom2nexus.py  sync_jf16m_geometry.py
xfel/ui/: CLAUDE.md  __init__.py  phil_patch.py
xfel/ui/db/: job.py  (+15 more)
xfel/util/: cctbx_xfel_installer.py  dials_file_matcher.py  dials_pickle_reader.py  drift.py  drifter.py  image_pickle_locator.py  jungfrau.py  kapton_2019_correction_frame_frame_plugin.py  lcls_xfelgui_installer.sh  mp.py  preference.py  preferential_orientation.py  reflection_length.py  sfapi_connector.py  show_spot_separation.py  split_detector.py  standalone_xfelgui_installer.sh  sublattice_helper.py  usage_monitor.py  weather.py
xfel/vonHamos/: __init__.py  fit_3_gaussian.py  test_3_gaussian.py  xes_ext.cpp
xfel/xpp/: experiment_schema.sql  isoform.py  progress_support.py  progress_utils.py  simulate.py  split_pickles.py
(+11500 files in other folders)
